--- a/src/components/person-details/person-details.css
+++ b/src/components/person-details/person-details.css
@@ -1,15 +1,16 @@
 .person-details {
-  display: flex;
+  width: 45%;
   margin-top: 1rem;
   flex-direction: row;
   padding: 1rem;
+  float: right;
 }
 
 .person-details .person-image {
   width: 190px;
   height: 220px;
   border-radius: 10px;
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 
 .person-details .list-group-item {
@@ -17,5 +18,5 @@
 }
 
 .person-details .list-group-item .term {
-  margin-right: 0.5rem;
+  margin-right: 2rem;
 }
