--- a/src/components/item-list/item-list.css
+++ b/src/components/item-list/item-list.css
@@ -1,9 +1,9 @@
 .item-list {
-    width: 580px;
+    width: 50%;
     cursor: pointer;
     float: left;
     margin-right: 1rem;
-    
+    border-radius: 10px;
 }
 
 .item-list .list-group {
