--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,10 @@
 .header {
-  display: inline;
+  margin: 10px auto;
+}
+
+.nav{
+  justify-content: center;
+  align-items: stretch;
 }
 
 .header h1 {
@@ -9,7 +14,7 @@
 
 .header button {
   width: 10rem;
-  margin-top: 0.3rem;
+  height: 3rem;
   margin-right: 5rem;
   background: none;
   padding: 8px;
