--- a/src/components/person-details/person-details.css
+++ b/src/components/person-details/person-details.css
@@ -22,3 +22,13 @@
 .person-details .list-group-item .term {
   margin-right: 0.5rem;
 }
+
+.person-select {
+  margin-top: 3rem;
+  width: 45%;
+  display: flex;
+  font-size: 1.5rem;
+  flex-direction: column;
+  align-items: center;
+  color: #54bff5;
+}
