--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -2,4 +2,11 @@
     margin: 1rem auto 0 auto;
     max-width: 1100px;
   }
+
+  .star-db-app h2 {
+    display: flex;
+    color: rgb(110, 219, 233);
+    justify-content: center;
+    margin-top: 3rem;
+  }
   
